[package]
name = "git-agenix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
age = { version = "0.7.0", features = [ "cli-common", "armor", "ssh", "plugin" ] }
anyhow = { version = "1.0.52", features = ["backtrace"] }
blake3 = "1.2.0"
clap = { version = "3.0.0-rc.8", features = [ "derive" ] }
env_logger = "0.9.0"
git2 = { version = "0.13.25", default-features = false }
log = "0.4.14"
regex = "1.5.4"
serde_json = "1.0.73"
thiserror = "1.0.30"

[features]
